implemented a regular expression model-checker